# Otus-C-Developer

./: README.md
01/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
01/.github/workflows/: release.yml
02/: CMakeLists.txt  main.cpp
